Fixed alignment of the rightmost nav item dropdown. Had to remove the margin right and set a class that tells bootstrap to align the dropdown with the right edge of the button.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -69,6 +69,10 @@ h3.numeral {
   margin-right: 55px;
 }
 
+#navbar-expandable li.nav-item.dropdown a.nav-link {
+  margin-right: 0px;
+}
+
 div#community-dropdown {
   background: #1d292e;
   border-radius: 0px;
